--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -14,7 +14,7 @@
 
         <header>
             <div class="">
-                Logo
+                <h1>Logo</h1>
             </div>
             <div class="">
                 navigation
