add chained post and get requests from client

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -18,13 +18,9 @@
 
         <main>
             <section>
-                <form class="" onsubmit="return Client.handleSubmitGET(event)">
+                <form class="" onsubmit="return Client.handleSubmit(event)">
                     <input id="name" type="text" name="input" value="" onblur="onBlur()" placeholder="Name">
-                    <input type="submit" name="" value="Test GET" onclick="return Client.handleSubmitGET(event)" onsubmit="return Client.handleSubmitGET(event)">
-                </form>
-                <form class="" onsubmit="return Client.handleSubmitPOST(event)">
-                    <input id="name" type="text" name="input" value="" onblur="onBlur()" placeholder="Name">
-                    <input type="button" name="" value="Test POST" onclick="return Client.handleSubmitPOST(event)" onsubmit="return Client.handleSubmitPOST(event)">
+                    <input type="button" name="" value="Test POST" onclick="return Client.handleSubmit(event)" onsubmit="return Client.handleSubmit(event)">
                 </form>
             </section>
 
