--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -19,7 +19,7 @@
         <main>
             <section>
                 <form class="" onsubmit="return Client.handleSubmit(event)">
-                    <input id="name" type="text" name="input" value="" onblur="onBlur()" placeholder="Name">
+                    <input id="inputPara" type="text" name="input" value="" onblur="onBlur()" placeholder="Enter paragraph to analyze">
                     <input type="button" name="" value="Test POST" onclick="return Client.handleSubmit(event)" onsubmit="return Client.handleSubmit(event)">
                 </form>
             </section>
