add dummy paragraph and sentiment object for testing

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -26,7 +26,10 @@
 
             <section>
                 <strong>Form Results:</strong>
-                <div id="results"></div>
+                <div id="results">
+                    <div id="resultsTextAnalyzed"><p><strong>Text Analyzed: </strong>Lorem ipsum ... ... ...</p></div>
+                    <div id="resultsSentiment"><p><strong>Subjectivity: </strong>Agreement</p></div>
+                </div>
             </section>
         </main>
 
