--- a/src/client/styles/base.scss
+++ b/src/client/styles/base.scss
@@ -12,3 +12,10 @@ section {
     max-width: 800px;
     margin: 50px auto;
 }
+
+
+#results {
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    grid-gap: 10px;
+}
