--- a/src/client/styles/base.scss
+++ b/src/client/styles/base.scss
@@ -19,3 +19,24 @@ section {
     grid-template-columns: 1fr 3fr;
     grid-gap: 10px;
 }
+
+
+.headingDiv {
+    text-transform: lowercase;
+}
+
+.headingDiv:first-letter {
+    text-transform: capitalize;
+}
+
+.bodyDiv:first-letter {
+    text-transform: capitalize;
+}
+
+.bodyDiv {
+    text-transform: lowercase;
+}
+
+#body_text {
+    text-transform: none
+}
