--- a/src/client/styles/base.scss
+++ b/src/client/styles/base.scss
@@ -1,42 +1,27 @@
-body {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-}
-
-main {
-    flex: 2;
-}
-
-section {
-    max-width: 800px;
-    margin: 50px auto;
+/* FONTS */
+h1 {
+    font-family: sans-serif;
+    font-size: 32px;
+    font-weight: bold;
 }
 
 
-#results {
-    display: grid;
-    grid-template-columns: 1fr 3fr;
-    grid-gap: 10px;
+h3 {
+    font-family: sans-serif;
+    font-size: 20px;
 }
 
 
-.headingDiv {
-    text-transform: lowercase;
+label {
+    font-family: sans-serif;
+    font-size: 16px;
 }
 
-.headingDiv:first-letter {
-    text-transform: capitalize;
+
+p {
+    font-family: sans-serif;
+    font-size: 16px;
+    line-height: 1.25em;
 }
 
-.bodyDiv:first-letter {
-    text-transform: capitalize;
-}
 
-.bodyDiv {
-    text-transform: lowercase;
-}
-
-#body_text {
-    text-transform: none
-}
