--- a/src/client/styles/form.scss
+++ b/src/client/styles/form.scss
@@ -4,9 +4,11 @@ form {
     padding: 40px;
 }
 
+
 input {
     padding: 5px 20px;
     width: 100%;
     line-height: 16px;
     margin: 10px 0;
+    font-size: 16px;
 }
