--- a/src/client/styles/form.scss
+++ b/src/client/styles/form.scss
@@ -12,3 +12,35 @@ input {
     margin: 10px 0;
     font-size: 16px;
 }
+
+
+textarea {
+    padding: 10px 10px;
+    width: 100%;
+    margin: 10px 0;
+    font-size: 16px;
+    line-height: 1.25em;
+    font-family: sans-serif;
+    resize: none;
+    height: 1.25em * 5.5;
+    overflow: hidden;
+}
+
+
+@media (max-width: 700px) {
+    form {
+        border: none;
+        padding: 1px;
+    }
+    
+    
+    input {
+        height: 3em;
+    }
+
+
+    textarea {
+        height: 1.25em * 10.5;
+    }
+
+}
