--- a/src/client/styles/header.scss
+++ b/src/client/styles/header.scss
@@ -3,3 +3,10 @@ header {
     justify-content: space-between;
     padding: 10px 40px;
 }
+
+
+@media (max-width: 700px) {
+    header {
+        padding: 10px 20px;
+    }
+}
